WIP rename "Date & Time" to "Timestamp"
This includes renaming the in-code type from "datetime" to "timestamp".
That affects modules and render cache. TODO build a transition strategy.

--- a/integrationtests/module-zipfile-server/modules/convert-date/convert-date.yaml
+++ b/integrationtests/module-zipfile-server/modules/convert-date/convert-date.yaml
@@ -1,9 +1,9 @@
-id_name: 'convert-date'
-name: 'Convert to date & time'
+id_name: convert-date
+name: Convert to timestamp
 category: Clean
 help_url: modules/convert-to-date-time
 icon: calendar
-description: 'Convert text columns to date & time.'
+description: 'Convert text columns to timestamp.'
 parameters:
 - id_name: colnames
   name: ''
