--- a/integrationtests/module-zipfile-server/modules/countbydate/countbydate.yaml
+++ b/integrationtests/module-zipfile-server/modules/countbydate/countbydate.yaml
@@ -12,7 +12,7 @@
       "id_name" : "column",
       "type": "column",
       "placeholder": "Select date column",
-      "column_types": [ "datetime" ]
+      "column_types": [ "timestamp" ]
     },
     {
       "name": "Group by",
